# VocabularyService

./: .gitignore  README.md  oxford-5k.csv  pyproject.toml  subtitle_words.py  subtitles_test.srt  translation.py  word_level.py  word_tagging.py
src/: db_service.py  main.py  models.py  new_movie.py  subtitle_words.py  translation.py  word_level.py  word_level_contractions.py  word_tagging.py
src/conf/: example.env
src/data/: cerf-words-dict.pkl  cerf_words_dict.pkl  contractions-dict.pkl  contractions_dict.pkl  db_serviceAccount.json  harry_potter.srt  harry_potter_copy.srt  informal_contractions.csv  oxford-5k.csv  test.srt
